# kube-custom-resource

./: README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: pr.yaml  pypi-publish.yaml
kube_custom_resource/: __init__.py  custom_resource.py  generate.py  registry.py  runtime_utils.py  schema.py
tests/: test_schema_generation.py  test_validation.py
tests/models/v1alpha1/: __init__.py  car.py  manufacturer.py
