[metadata]
name = kube-custom-resource
description = Utilities for working with Kubernetes custom resources.
long_description = file: README.md
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/kube-custom-resource


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    annotated-types
    click
    pydantic

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-sugar
    ruff
    codespell
    types-PyYAML
    types-setuptools
    mypy
    black


[options.entry_points]
console_scripts =
    kcr_generate = kube_custom_resource.generate:main

[options.package_data]
kube_custom_resource =
    py.typed